# cargo-equip

./: Cargo.toml  README.md
src/: cargo_udeps.rs  lib.rs  process.rs  ra_proc_macro.rs  rust.rs  toolchain.rs  workspace.rs
src/workspace/: license.rs
tests/: help-snapshot.rs  md5-snapshots.rs
tests/snapshots/: help_snapshot__long.snap  help_snapshot__short.snap
