[package]
name = "cargo-equip"
version = "0.20.3"
edition = "2024"
description = "A Cargo subcommand to bundle your code into one `.rs` file for competitive programming."
repository = "https://github.com/madonoharu/cargo-equip"
license = "MIT OR Apache-2.0"
keywords = ["cli", "competitive", "windows"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
anyhow = "1"
atty = "0.2.14"
camino = { version = "1.1.6", features = ["serde1"] }
cargo_metadata = "0.19"
cargo-util = "0.2"
cfg-expr = "0.20"
derive_more = "0.99.17"
dirs-next = "2.0.0"
fixedbitset = "0.5"
if_chain = "1.0.2"
indoc = "2"
itertools = "0.14"
krates = { version = "0.20", features = ["metadata"] }
maplit = "1.0.2"
petgraph = "0.8"
prettytable-rs = "0.10.0"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1"
ra_ap_paths = "=0.0.166"
ra_ap_proc_macro_api = "=0.0.166"
ra_ap_tt = "=0.0.166"
rand = "0.8.5"
rustminify = "0.2.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
spdx = "0.6.2"
structopt = "0.3.26"
strum = { version = "0.25.0", features = ["derive"] }
syn = { version = "1.0.109", features = [
  "extra-traits",
  "full",
  "parsing",
  "visit"
] }
tap = "1.0.1"
tempfile = "3.7.0"
termcolor = "1.2.0"
toml = "0.9"
toml_edit = "0.24"
which = "4.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
insta = "1.31.0"
md5 = "0.7.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
